--- a/sql/til_20210830.md
+++ b/sql/til_20210830.md
@@ -32,7 +32,7 @@
     - ex) GRUNT, REVOKE, DENY
 
 # SQL 쿼리문 예시
-- where
+- **WHERE**
 - 인구가 1억 이상인 국가 출력
 ```
 select code, name, population
@@ -40,14 +40,14 @@ from country
 where population >= 10000 * 10000;
 ```
 
-- between
+- **BETWEEN**
 ```
 select code, name, population
 from country 
 where population between 7000*10000 and 10000*10000;
 ```
 
-- IN, NOT IN
+- **IN, NOT IN**
 ```
 select code, name, continent, population
 from country
@@ -58,7 +58,7 @@ from country
 where continent not in ("Asia", "Africa");
 ```
 
-- LIKE: 특정 문자열이 포함되어 있는 데이터를 출력
+- **LIKE**: 특정 문자열이 포함되어 있는 데이터를 출력
 ```
 select code, name, localname
 from country
@@ -67,7 +67,7 @@ where localname like "%ea%";
 -- where local name like "%K";
 ```
 
-- ORDER BY: 데이터의 순서를 정렬
+- **ORDER BY**: 데이터의 순서를 정렬
 ```
 select code, name, population
 from country
@@ -78,7 +78,7 @@ from city
 order by countrycode desc, population asc;
 ```
 
-- LIMIT : 조회되는 데이터의 수를 제한
+- **LIMIT** : 조회되는 데이터의 수를 제한
 - 인구 상위 5개의 국가를 내림차순으로 출력
 ```
 select code, name, population
@@ -95,7 +95,7 @@ order by population desc
 limit 5, 3;      # 5개 스킵 이후 3개 출력
 ```
 
-- DISTINCT: 중복을 제거해주는 예약어
+- **DISTINCT**: 중복을 제거해주는 예약어
 - 도시의 인구가 300만 이상의 도시를 가지고 있는 국가의 국가 코드를 출력
 ```
 select distinct countrycode, population
