--- a/python/til_20210906.md
+++ b/python/til_20210906.md
@@ -28,3 +28,35 @@
 ## set = {}
 - 중복된 값을 허용하지 않는 자료구조
 - it works exactly same as sets from Algebra
+
+# 03. Python Control Flow
+##Practices
+1. input함수를 사용하여 사용자로부터 키, 몸무게를 입력받아 변수에 저장하고 변수를 사용하여 bmi를 계산 후 아래 조건식에 따라 사용자의 체형을 출력해주는 프로그램을 작성
+	bmi = 체중(kg) / 키(m)^2
+	20 미만 - 저체중
+	20 ~ 24미만 - 표준체중
+	24 ~ 30미만 - 과체중
+	30 이상 - 비만
+
+	- code:
+	```
+	height = float(input("키를 입력하세요:(m) "))
+	weight = float(input("몸무게를 입력하세요: "))
+	bmi = round(weight / (height * height), 2)
+	if bmi < 20:
+		print('저체중')
+	elif 20 <= bmi  and bmi < 24:
+		print('표준체중')
+	elif 24 <= bmi  and bmi < 30:
+		print('과체중')
+	else:
+		print('비만')
+	```
+2. for 문을 사용하고 range() 명령어를 사용하여 구구단 전체를 출력하기
+	- code:
+	```
+	for i in range(2, 10):
+		for j in range(1,10):
+			print(f'{i} X {j} = {i * j}')
+	```
+
