--- a/machine_learning_online/til_20210909.md
+++ b/machine_learning_online/til_20210909.md
@@ -19,3 +19,4 @@
 - Logistic Regression 모델 생성/학습하기
     - Logistic Regression: to find a relationship between features and probability of particular outcome
     	- a mathematical model to estimate the probability of an event occurring having been given some previous data
+	- y-value(phi) range: 0 ~ 1 (because it represents of probability)
