feat: Add citation on the doc
Added a link of the data I used

--- a/machine_learning_online/til_20210915.md
+++ b/machine_learning_online/til_20210915.md
@@ -2,6 +2,8 @@
 
 # Chapter 3. 데이터로 알아보는 리그 오브 레전드의 승리 공식
 
+- Source: [Dataset](https://www.kaggle.com/bobbyscience/league-of-legends-diamond-ranked-games-10-min)
+
 # Step 0. 리그 오브 레전드 데이터셋
 
 # Step 1. 데이터셋 준비하기
